@@ -1,4 +1,5 @@
 1.3.0
+	buffer audio when modem is in command-mode and process it when not
 	improve pty read speed
 	improve logging detail
 	allow spandsp-v17rx fast-train to be more-permissive
